# control-test-task

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 931b9c15b950_create_bookings_table.py
app/: main.py
app/api/routers/: bookings.py
app/core/: config.py  logging.py
app/db/: session.py
app/models/: __init__.py  booking.py  enums.py
app/repositories/: booking_repository.py
app/schemas/: booking.py
app/services/: booking_service.py  exceptions.py
app/workers/: celery_app.py  exceptions.py  tasks.py
tests/: conftest.py  test_bookings_api.py  test_worker.py
